--- a/PhoneShoppe/shop/shop.html
+++ b/PhoneShoppe/shop/shop.html
@@ -14,7 +14,7 @@
 <body>
     <div>
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
-            <div class="container-fluid container"><a class="navbar-brand" href="#"><img src="https://www.favicon.cc/logo3d/144807.png" height="70" width="65"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container-fluid container"><a class="navbar-brand" href="../main.html"><img src="https://www.favicon.cc/logo3d/144807.png" height="70" width="65"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navbarResponsive">
                     <ul class="nav navbar-nav text-uppercase ml-auto">
@@ -65,7 +65,7 @@
                                     <p class="product-description">The Apple&nbsp;<strong>iPhone 6s</strong>&nbsp;is a smartphone that was tested with the&nbsp;<strong>iOS</strong>&nbsp;10.1.1 operating system. This model weighs 5 ounces, has a 4.7 inch touch screen display, 12-megapixel
                                         main camera, and 5-megapixel selfie camera. It comes with 2GB of RAM.<br></p>
                                     <div class="row">
-                                        <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                        <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                         <div class="col-6">
                                             <p class="product-price">P11,000</p>
                                         </div>
@@ -91,7 +91,7 @@
                                     <p class="product-description">With its 6.1-inch display, the&nbsp;<strong>iPhone 11</strong>&nbsp;is between the 5.8-inch&nbsp;<strong>iPhone 11</strong>&nbsp;Pro and 6.5-inch&nbsp;<strong>iPhone 11</strong>&nbsp;Pro Max in size. The&nbsp;<strong>iPhone 11</strong>&nbsp;measures
                                         in at 150.9mm tall, 75.7mm wide, and 8.3mm thick, which is identical to the previous-generation&nbsp;<strong>iPhone</strong>&nbsp;XR.<br></p>
                                     <div class="row">
-                                        <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                        <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                         <div class="col-6">
                                             <p class="product-price">P35,257</p>
                                         </div>
@@ -117,7 +117,7 @@
                                     <p class="product-description">The&nbsp;<strong>iPhone 11 Pro</strong>&nbsp;is Apple's most powerful phone. It has a triple-lens camera to capture best-in-class photos and video from a variety of perspectives, a new night mode to enhance low-light
                                         photography and extra battery life prowess.<br><br></p>
                                     <div class="row">
-                                        <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                        <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                         <div class="col-6">
                                             <p class="product-price">P50,389</p>
                                         </div>
@@ -143,7 +143,7 @@
                                     <p class="product-description">The<strong> Samsung Galaxy Note 10</strong>&nbsp;runs on Android v9.0 (Pie) operating system and&nbsp;<strong>Samsung</strong>&nbsp;Exynos 9 Octa 9825 Chipset. It has 8 GB RAM and 256 GB internal storage.<br></p>
                                     <div
                                         class="row">
-                                        <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                        <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                         <div class="col-6">
                                             <p class="product-price">P53,990</p>
                                         </div>
@@ -168,7 +168,7 @@
                             <div class="col-12">
                                 <p class="product-description">The&nbsp;<strong>OPPO F11 Pro</strong>&nbsp;packs a 6.5" IPS LCD display, 16MP selfie camera, 48MP + 5MP dual rear cameras, Helio P70, 6GB RAM, and a 4,000mAh battery with VOOC 3.0 fast charging.<br></p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                    <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                     <div class="col-6">
                                         <p class="product-price">P17,990</p>
                                     </div>
@@ -194,7 +194,7 @@
                                 <p class="product-description">The Vivo&nbsp;<strong>V15</strong>&nbsp;11&nbsp;<strong>Pro</strong>&nbsp;includes a 16-megapixel camera. On the rear panel, It&nbsp;includes a primary 48-megapixel
                                     camera with F1.7 lens and a secondary 5-megapixel depth.<br></p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                    <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                     <div class="col-6">
                                         <p class="product-price">P17,999</p>
                                     </div>
@@ -220,7 +220,7 @@
                                 <p class="product-description">The&nbsp;<strong>iPhone X</strong>&nbsp;was Apple's flagship 10th anniversary&nbsp;<strong>iPhone</strong>&nbsp;featuring a 5.8-inch OLED display, facial recognition and 3D camera functionality, a glass body, and an A11
                                     Bionic processor.<br></p>
                                 <div class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                    <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                     <div class="col-6">
                                         <p class="product-price">P56,556</p>
                                     </div>
@@ -246,7 +246,7 @@
                                 <p class="product-description">Equipped with a 5.1” Quad HD (2,560 x 1,440) Super AMOLED display, the&nbsp;<strong>Samsung Galaxy S6 edge</strong>&nbsp;provides sharp viewing experience, and its adaptive display provides unbeatable clarity.<br><br></p>
                                 <div
                                     class="row">
-                                    <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                    <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                     <div class="col-6">
                                         <p class="product-price">P12,650</p>
                                     </div>
@@ -271,7 +271,7 @@
                         <div class="col-12">
                             <p class="product-description">It delivers on change with a novel-looking Infinity-O screen so large it displaces the front camera, and a triple-lens rear camera that takes ultra-wide photos. It has 8 GB RAM and 128 GB internal storage.<br></p>
                             <div class="row">
-                                <div class="col-6"><button class="btn btn-light" type="button">Buy Now!</button></div>
+                                <div class="col-6"><a href="buy.html"><button class="btn btn-light" type="button">Buy Now!</button><a href="buy.html"></div>
                                 <div class="col-6">
                                     <p class="product-price">P49,990</p>
                                 </div>
